# vibeship-mind

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  Taskfile.yaml  pyproject.toml
.mind/: MEMORY.md  REMINDERS.md  SESSION.md  config.json
autonomy.lance/_transactions/: 0-12fa4b63-082b-4255-8798-3d708cdc458e.txn
autonomy.lance/_versions/: 1.manifest
dashboard/: package-lock.json  package.json
dashboard/src/: app.html
decisions.lance/_transactions/: 0-1a3260a3-8709-4f30-bbf2-6795a305b8b1.txn
decisions.lance/_versions/: 1.manifest
docker/: Dockerfile  docker-compose.yml  init.sql
docs/: ARCHITECTURE.md  ARCHITECTURE_CONTEXT.md  CLAUDE.md  CLI.md  COLLABORATION_MATRIX.md  COLLABORATION_RULES.md  DAEMON.md  DATA_MODELS.md  DESIGN_RATIONALE.md  HOW_IT_WORKS.md  IMPLEMENTATION.md  MASTER_PROMPT.md  MCP_TOOLS.md  MIND_V5_PATH_TO_BEST.md  MIND_V5_TECHNICAL_ARCHITECTURE.md  ONBOARDING.md  PARSER.md  PHILOSOPHY.md  README.md  ROADMAP.md  SELF_IMPROVE_ARCHITECTURE.md  SELF_IMPROVE_IMPLEMENTATION.md  SHARP_EDGES.md  SKILL_ENHANCEMENTS.md  SUPPORTING_DOCS.md  TEAM_ORCHESTRATION.md  V3_GUIDE.md  VIBESHIP_ECOSYSTEM.md  mind-self-improvement-audit.md  mind-v2-architecture-migration.md  mind-v2-session-memory.md  spawner-skill-packs-spec.md
docs/archive/: CLI.md  IMPLEMENTATION.md  INTELLIGENCE.md  ONBOARDING.md  PARSER.md  mind-v2-architecture-migration.md  mind-v2-session-memory.md
docs/plans/: 2025-12-12-context-relevance-scoring-design.md  2025-12-12-dashboard-design.md  2025-12-12-proactive-edge-detection-design.md  2025-12-12-session-narrative-capture-design.md  2025-12-13-maintainability-design.md  2025-12-13-reminders-design.md  2025-12-15-semantic-memory-architecture-design.md  2025-12-18-mind-stability-customization.md  2025-12-25-mind-v3-context-graph-design.md  2025-12-26-api-intelligence-progress.md  2025-12-26-v3-completion-plan.md  2025-12-26-v3-migration.md
docs/specs/: DATABASE_DDL.sql  EVENT_CATALOG.md  SLO_DEFINITIONS.md  openapi.yaml
entities.lance/_transactions/: 0-f50367da-4593-4110-b48c-8b999fffd8c1.txn
entities.lance/_versions/: 1.manifest
exceptions.lance/_transactions/: 0-e60dbddc-68d5-4c2b-ba05-67c8311256b9.txn
exceptions.lance/_versions/: 1.manifest
hooks/: claude-settings.json  post-commit.sh  session-end.sh  session-start.sh
memories.lance/_transactions/: 0-787b0b44-3858-44d9-b887-7c6ff69e5a89.txn
memories.lance/_versions/: 1.manifest
outcomes.lance/_transactions/: 0-33d7f3cf-cb19-4faf-94f4-61451978f47c.txn
outcomes.lance/_versions/: 1.manifest
patterns.lance/_transactions/: 0-98250176-b5b4-41df-8a2d-6f2f75be393d.txn
patterns.lance/_versions/: 1.manifest
playground/: TESTING_GUIDE.md  test_runner.py
policies.lance/_transactions/: 0-cd6f9eaa-cdbb-44f3-bb33-492afe119c04.txn
policies.lance/_versions/: 1.manifest
precedents.lance/_transactions/: 0-f2d7eb89-c47a-4ba7-8625-3d867be95f14.txn
skills/: CLAUDE_INSTRUCTIONS.md  README.md  registry.yaml
skills/ml-memory/: skill.md  (+2 more)
tests/: __init__.py  conftest.py  test_api.py  test_context.py  test_context_reminders.py  test_decay.py  test_detection.py  test_logging_levels.py  test_mcp_config.py  test_models.py  test_preferences.py  test_primer.py  test_self_improve.py  test_session.py  test_similarity.py  test_smart_promotion.py  test_storage.py
web/: package-lock.json  package.json  railway.json
(+321 files in other folders)
