[project]
name = "vibeship-mind"
version = "2.1.2"
description = "File-based memory system for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "watchfiles>=0.21.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
mind = "mind.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
