[project]
name = "vibeship-mind"
version = "3.0.2"
description = "Context graph memory system for AI coding assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "watchfiles>=0.21.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
    # v3 additions
    "lancedb>=0.4.0",
    "watchdog>=4.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
embeddings = [
    "numpy>=1.24.0",
]
api = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
mind = "mind.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
