[project]
name = "mind"
version = "5.0.0"
description = "Decision intelligence system for AI agents - hierarchical memory with outcome-weighted retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "pgvector>=0.2.4",

    # Messaging
    "nats-py>=2.6.0",

    # Observability
    "structlog>=24.1.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "prometheus-client>=0.19.0",

    # Utilities
    "httpx>=0.26.0",
    "orjson>=3.9.0",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
ml = [
    # Embeddings & NLP
    "openai>=1.12.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.26.0",
]
vector = [
    # Qdrant client (optional, pgvector is default)
    "qdrant-client>=1.7.0",
]
temporal = [
    # Temporal.io workflow orchestration
    "temporalio>=1.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "testcontainers[postgres,nats]>=3.7.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[project.scripts]
mind = "mind.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
